# santa-bot

./: Dockerfile  pyproject.toml
santa_bot/: config.py
santa_bot/bot/: bot.py  main.py
santa_bot/db/: manager.py  tables.py
santa_bot/utils/: consts.py  states.py
